--- a/index.html
+++ b/index.html
@@ -700,6 +700,8 @@ function next_grup7() {
     show_grup7(grup7Index);
 }
 </script>
+  <audio id="music" src="audio.mp3"></audio>
+  <button id="surpriseButton" style="position: fixed; bottom: 20px; right: 20px; z-index: 999;">🎵</button>
 </body>
 </html>
 
